BACKPORT: drm/i915: Make sure DC writes are coherent on flush.

We need to set the DC FLUSH PIPE_CONTROL bit on Gen7+ to guarantee
that writes performed via the HDC are visible in memory.  Fixes an
intermittent failure in a Piglit test that writes to a BO from a
shader using GL atomic counters (implemented as HDC untyped atomics)
and then expects the memory to read back the same value after mapping
it on the CPU.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=91298
Tested-by: Mark Janes <mark.a.janes@intel.com>
Cc: Rodrigo Vivi <rodrigo.vivi@intel.com>
Cc: stable@vger.kernel.org
Signed-off-by: Francisco Jerez <currojerez@riseup.net>
Reviewed-by: Ville Syrjl <ville.syrjala@linux.intel.com>
Link: http://patchwork.freedesktop.org/patch/msgid/1452740379-3194-1-git-send-email-currojerez@riseup.net
(cherry picked from commit 965fd602a6436f689f4f2fe40a6789582778ccd5)
Signed-off-by: Jani Nikula <jani.nikula@intel.com>
(cherry picked from commit 935a0ff0e1ea62a116848c0a187b13838f7b9cee)

(squash in PIPE_CONTROL_DC_FLUSH_ENABLE define from c82435bbe5ac
"drm/i915/gen8: Add WaFlushCoherentL3CacheLinesAtContextSwitch
workaround")

 Conflicts:
	drivers/gpu/drm/i915/intel_lrc.c
	(Drop intel_lrc.c changes, as no BDW execlists on chromeos-3.14)

BUG=b:30716312
TEST=No deqp regressions on Samus, reduced deqp flakiness on Samus

Change-Id: I266bf587f7d119409d1b7a9594db3f4bef7632bf
Signed-off-by: James Ausmus <james.ausmus@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/365449
Tested-by: Michael W Mason <michael.w.mason@intel.com>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Haixia Shi <hshi@chromium.org>